--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,6 @@
         <item name="android:listPreferredItemHeightSmall">60dp</item><!-- item size in menu-->
         <item name="listPreferredItemHeightSmall">60dp</item><!-- item size in menu-->
     </style>
+
+    <style name="Theme.AppTheme.Light.NoActionBar" parent="Theme.Design.NoActionBar" />
 </resources>
