--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
     tools:layout_editor_absoluteY="25dp">
 
     <TextView
@@ -25,11 +24,12 @@
         android:id="@+id/sign_in_email"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textPersonName"
         android:textSize="20sp"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -51,22 +51,17 @@
         android:id="@+id/sign_in_enter"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/button_background_transparent"
+        android:layout_marginBottom="8dp"
         android:text="Войти"
         app:layout_constraintBottom_toTopOf="@+id/sign_in_reg"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_in_password"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/sign_in_reg"
-        android:layout_width="120dp"
+        android:layout_width="125dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:background="@android:color/white"
+        android:layout_marginBottom="8dp"
         android:text="Регистрация"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/sign_in_miss"
@@ -77,7 +72,7 @@
         android:id="@+id/sign_in_miss"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="72dp"
+        android:layout_marginBottom="32dp"
         android:text="@string/miss"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="16sp"
