--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="98"
+        android:text="..."
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="..."
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/detail_name"
@@ -47,7 +47,7 @@
         android:layout_height="300dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="?attr/colorError" />
+        app:srcCompat="@color/transparent" />
 
     <TextView
         android:id="@+id/detail_name"
@@ -56,7 +56,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:text="..."
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
