--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,5 +13,5 @@
         <item name="listPreferredItemHeightSmall">60dp</item><!-- item size in menu-->
     </style>
 
-    <style name="Theme.AppTheme.Light.NoActionBar" parent="Theme.Design.NoActionBar" />
+    <style name="YandexGalleryTheme" parent="Theme.Design.NoActionBar" />
 </resources>
