--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="?android:attr/colorAccent"
         android:theme="@style/NavigationDrawerStyle"
         app:headerLayout="@layout/nav_header"
+        app:itemTextColor="@color/white"
         app:menu="@menu/drawer_view" />
 </android.support.v4.widget.DrawerLayout>
