--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,28 +6,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detail_image"
+        app:srcCompat="@drawable/ic_file_download_light_24dp" />
+
     <TextView
         android:id="@+id/detail_likes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:text="..."
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detail_image" />
+        app:layout_constraintBottom_toBottomOf="@+id/detail_like_button"
+        app:layout_constraintEnd_toStartOf="@+id/detail_like_button"
+        app:layout_constraintTop_toTopOf="@+id/detail_like_button" />
 
     <ImageView
         android:id="@+id/detail_like_button"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
         android:alpha="0.3"
-        app:layout_constraintBottom_toBottomOf="@+id/detail_likes"
-        app:layout_constraintStart_toEndOf="@+id/detail_likes"
-        app:layout_constraintTop_toTopOf="@+id/detail_likes"
-        app:srcCompat="@drawable/like_small" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detail_image"
+        app:srcCompat="@drawable/ic_favorite_light_24dp" />
 
     <TextView
         android:id="@+id/detail_description"
