--- a/app/src/main/res/layout/fragment_new_image.xml
+++ b/app/src/main/res/layout/fragment_new_image.xml
@@ -56,12 +56,17 @@
 
     <Button
         android:id="@+id/new_image_upload"
-        android:layout_width="wrap_content"
+        style="@style/ColoredButton"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:text="Загрузить"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/new_image_description"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/new_image_description" />
 
 </android.support.constraint.ConstraintLayout>
