--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -12,7 +12,7 @@
         android:padding="12dp"
         android:text="Выйти из аккаунта"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/settings_mark"
@@ -21,16 +21,16 @@
         android:padding="12dp"
         android:text="Оценить в Google Play"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/settings_about_company"
+        android:id="@+id/settings_about_app"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="12dp"
-        android:text="О компании"
+        android:text="О приложении"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/settings_instruction"
@@ -39,7 +39,7 @@
         android:padding="12dp"
         android:text="Интсрукция"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/settings_about_version"
@@ -48,5 +48,5 @@
         android:padding="12dp"
         android:text="Что новго в версии?"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
 </LinearLayout>
