--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="72dp"
         android:ems="10"
         android:hint="Email"
-        android:inputType="textPassword"
+        android:inputType="text"
         android:textSize="20sp"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -54,7 +54,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Пароль"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
