--- a/app/src/main/res/layout/intro_slide.xml
+++ b/app/src/main/res/layout/intro_slide.xml
@@ -11,7 +11,8 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Кофе и чай"
+        android:text="Галерея"
+        android:textColor="@color/white"
         android:textAlignment="center"
         android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
+        android:textColor="@color/white"
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
         android:textAlignment="center"
