--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -49,4 +49,13 @@
         android:text="Что новго в версии?"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/settings_github"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="12dp"
+        android:text="Код на GitHub"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="18sp" />
 </LinearLayout>
