--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -27,6 +27,7 @@
         android:layout_marginTop="80dp"
         android:ems="10"
         android:hint="Email"
+        android:inputType="text"
         android:textSize="20sp"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
